# BinauralGenerator

./: .gitignore  ANALISIS_EXPORTACION.md  ARQUITECTURA_Y_FLUJO.md  CMakeLists.txt  INICIO_RAPIDO.md  INSTALACION_LAME.md  README.md
Source/: BinauralGenerator.cpp  BinauralGenerator.h  BinauralOscillator.cpp  BinauralOscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h
